Day1/7 서울/src/eks/manifest/grafana/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: unicorn-grafana-ing
    namespace: monitoring
    annotations:
      alb.ingress.kubernetes.io/load-balancer-name: unicorn-grafana-alb
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
      alb.ingress.kubernetes.io/healthcheck-path: /api/health
      alb.ingress.kubernetes.io/healthcheck-interval-seconds: '5'
      alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '3'
      alb.ingress.kubernetes.io/healthy-threshold-count: '3'
      alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
      alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
  spec:
    ingressClassName: alb
    rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                number: 80
